[package]
name = "exgui_renderer_nanovg"
version = "0.1.0"
edition = "2018"

[dependencies]
nanovg = { version = "1.0", features = ["gl3"] }
exgui = { git = "https://github.com/exgui/exgui.git" }

[dev-dependencies]
exgui_controller_glutin = { git = "https://github.com/exgui/exgui_controller_glutin.git" }
chrono = "0.4"
rand = "0.4"
lazy_static = "1.0"
